--- a/menu.html
+++ b/menu.html
@@ -125,16 +125,21 @@
 													</a>
 												</li>
 												<li>
-													<a class="nav-link" href="menu.html">
+													<a class="nav-link active" href="menu.html">
 														Menu
 													</a>
 												</li>
 												<li>
-													<a class="nav-link active" href="gallery.html">
+													<a class="nav-link" href="gallery.html">
 														Gallery
 													</a>
 												</li>
-												
+												<li>
+													<a class="nav-link" href="contact-us.html">
+														Contact Us
+													</a>
+												</li>
+
 											</ul>
 										</nav>
 									</div>
@@ -156,7 +161,7 @@
 				<div class="container">
 					<div class="row my-4">
 						<div class="col-md-12 align-self-center text-center">
-							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold my-4">Gallery</h1>
+							<h1 class="text-9 text-color-light custom-secondary-font font-weight-bold my-4">Menu</h1>
 						</div>
 					</div>
 				</div>
@@ -165,221 +170,11 @@
 			<section class="section section-no-border bg-color-light m-0">
 				<div class="container">
 					<div class="row">
-						<div class="col">
-							<div id="galleryAjaxBox" class="ajax-box ajax-box-init mb-4">
 
-								<div class="bounce-loader">
-									<div class="bounce1"></div>
-									<div class="bounce2"></div>
-									<div class="bounce3"></div>
-								</div>
+						Start The Menu Here
 
-								<div class="ajax-box-content" id="galleryAjaxBoxContent"></div>
 
-							</div>
-						</div>
 					</div>
-					<div class="row" data-plugin-masonry data-plugin-options="{'itemSelector': '.col-lg-4'}">
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-1.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Baptism
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-2.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Wedding
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-3.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Church Community
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-4.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Wedding
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-5.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Church Community
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-6.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Baptism
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-7.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-1.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Baptism
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-8.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-2.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Wedding
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-						<div class="col-lg-4">
-							<span class="thumb-info custom-thumb-info-4">
-								<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
-									class="text-decoration-none custom-secondary-font text-color-dark"
-									data-ajax-on-page>
-									<span class="thumb-info-wrapper">
-										<img src="img/demos/church/gallery/gallery-9.jpg" alt class="img-fluid" />
-									</span>
-								</a>
-								<span class="thumb-info-caption custom-box-shadow">
-									<span class="thumb-info-caption-text">
-										<h2 class="font-weight-bold text-5 text-center">
-											<a data-href="ajax/demo-church-gallery-ajax-on-page-3.html"
-												class="text-decoration-none custom-secondary-font text-color-dark"
-												data-ajax-on-page>
-												Church Community
-											</a>
-										</h2>
-									</span>
-								</span>
-							</span>
-						</div>
-					</div>
-				</div>
 			</section>
 
 			<section class="section section-tertiary section-no-border m-0">
