--- a/page-404.html
+++ b/page-404.html
@@ -134,7 +134,12 @@
 														Gallery
 													</a>
 												</li>
-												
+												<li>
+													<a class="nav-link" href="contact-us.html">
+														Contact Us
+													</a>
+												</li>
+
 											</ul>
 										</nav>
 									</div>
