--- a/contact-us.html
+++ b/contact-us.html
@@ -134,6 +134,11 @@
 														Gallery
 													</a>
 												</li>
+												<li>
+													<a class="nav-link active" href="contact-us.html">
+														Contact Us
+													</a>
+												</li>
 												
 											</ul>
 										</nav>
@@ -166,108 +171,8 @@
 					</div>
 				</div>
 			</section>
-
-			<section class="section section-no-border bg-color-light m-0">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-7 col-sm-7">
-							<h2 class="font-weight-bold">We seek love God above all thing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ornare diam at lectus
-								ultrices rutrum. Fusce et lobortis orci, vel rutrum nisl. Praesent ut eros blandit risus
-								fermentum mattis. Ut eleifend metus in arcu malesuada, nec tincidunt lectus luctus.
-								Suspendisse dignissim velit eu lacinia egestas. Duis posuere mi a est vestibulum congue.
-								Pellentesque quis velit in velit maximus varius. Donec.</p>
-							<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis
-								mauris urna. Donec pellentesque eros non sapien malesuada, at facilisis diam interdum.
-								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
-								viverra neque ut, facilisis ligula. In faucibus tellus ac metus ullamcorper aliquet.
-								Aliquam sem dui, cursus quis magna vitae, convallis malesuada tellus. Nam malesuada.</p>
-						</div>
-						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
-							<div class="custom-box-squares">
-								<img class="custom-cloud left-pos-2" alt src="img/demos/church/others/left-cloud.png" />
-								<div class="custom-big-square left-pos-2 custom-box-shadow"
-									style="background: url('img/demos/church/others/big-left-square-img.jpg'); background-size: cover;">
-								</div>
-								<div class="custom-small-square left-pos-2 custom-box-shadow"
-									style="background: url('img/demos/church/others/small-left-square-img.jpg'); background-size: cover;">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="section section-secondary section-no-border m-0">
-				<div class="container">
-					<div class="row text-center justify-content-center">
-						<div class="col-sm-8 col-lg-4 mb-4 mb-lg-0">
-							<img src="img/demos/church/icons/custom-icon-1.png" alt class="img-repsonsive" />
-							<h2 class="font-weight-bold text-color-light">Our Values</h2>
-							<p class="custom-text-color-2 mb-0">Lorem ipsum dolor sit amet, adipiscing elit.</br> Mauris
-								accumsan tortor ut posuere consequat.</br> Fusce aliquet, dolor eget tempus ultricies,
-								eros.</p>
-						</div>
-						<div class="col-sm-8 col-lg-4 mb-4 mb-lg-0">
-							<img src="img/demos/church/icons/custom-icon-2.png" alt class="img-repsonsive" />
-							<h2 class="font-weight-bold text-color-light">Join with Us</h2>
-							<p class="custom-text-color-2 mb-0"><strong class="text-color-light">Sundays at 8.00pm -
-									9.00pm</strong></br> at Porto Church 123 Porto Blvd, </br>Suite 100 New York, NY</p>
-						</div>
-						<div class="col-sm-8 col-lg-4">
-							<img src="img/demos/church/icons/custom-icon-3.png" alt class="img-repsonsive" />
-							<h2 class="font-weight-bold text-color-light">Our Mission</h2>
-							<p class="custom-text-color-2 mb-0">Lorem ipsum dolor sit amet, adipiscing elit.</br> Mauris
-								accumsan tortor ut posuere consequat.</br> Fusce aliquet, dolor eget tempus ultricies,
-								eros.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="section bg-color-tertiary section-no-border m-0">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-sm-4">
-							<span class="thumb-info custom-thumb-info-3 thumb-info-no-zoom">
-								<span class="thumb-info-wrapper">
-									<img src="img/demos/church/about-us/about-us-expect-1.jpg" alt class="img-fluid" />
-								</span>
-								<span class="thumb-info-caption">
-									<span class="thumb-info-caption-text">
-										<h4 class="font-weight-bold custom-primary-font mb-0 mt-3">
-											Joe Albert Doe
-										</h4>
-										<p class="mb-0">The Reverend</p>
-									</span>
-								</span>
-							</span>
-							<a href="demo-church-about-us-staff.html"
-								class="btn btn-primary custom-btn-style-1 text-uppercase mb-4 mb-lg-0 mt-4"
-								title="Meet Our Staff">Meet our Staff</a>
-						</div>
-						<div class="col-lg-9 col-sm-8">
-							<h2 class="font-weight-bold">What to Expect</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum felis ac turpis
-								consectetur molestie. Donec rutrum nibh ac felis convallis tempor. Nunc non consequat
-								lorem. Duis a porta sapien. Aliquam erat volutpat. Suspendisse aliquam, mi in elementum
-								lacinia, orci erat hendrerit sem, eget varius elit magna sagittis velit. Proin posuere
-								malesuada sem, nec venenatis justo sodales eget. Nunc imperdiet.</p>
-							<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis
-								mauris urna. Donec pellentesque eros non sapien malesuada, at facilisis diam interdum.
-								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
-								viverra neque ut, facilisis ligula. In faucibus tellus ac metus ullamcorper aliquet.
-								Aliquam sem dui, cursus quis magna vitae, convallis malesuada tellus. Nam malesuada.</p>
-							<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis
-								mauris urna. Donec pellentesque eros non sapien malesuada, at facilisis diam interdum.
-								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
-								viverra neque ut, facilisis ligula. In faucibus tellus ac metus ullamcorper aliquet.
-								Aliquam sem dui, cursus quis magna vitae, convallis malesuada tellus. Nam malesuada.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
+			
+			
 			<section id="talkus" class="section section-no-border bg-color-light m-0">
 				<div class="container">
 					<div class="row">
