--- a/gallery.html
+++ b/gallery.html
@@ -130,8 +130,13 @@
 													</a>
 												</li>
 												<li>
-													<a class="nav-link" href="gallery.html">
+													<a class="nav-link active" href="gallery.html">
 														Gallery
+													</a>
+												</li>
+												<li>
+													<a class="nav-link" href="contact-us.html">
+														Contact Us
 													</a>
 												</li>
 												
