--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
 														Gallery
 													</a>
 												</li>
+												<li>
+													<a class="nav-link" href="contact-us.html">
+														Contact Us
+													</a>
+												</li>
 												
 											</ul>
 										</nav>
