--- a/index.html
+++ b/index.html
@@ -65,18 +65,37 @@
 					<div class="container">
 						<div class="row justify-content-between">
 							<div class="col-auto">
-								<p class="alternative-font-4 mb-0"><strong class="text-color-dark">Porto Church, A Place
-										to Belong!</strong></p>
+								<div class="d-flex align-items-center w-100 w-sm-50pct w-md-100pct ">
+									<div
+										class="animated-icon animated fadeIn svg-fill-color-primary position-relative bottom-2">
+										<!--?xml version="1.0" ?--><svg viewBox="0 0 512 512"
+											xmlns="http://www.w3.org/2000/svg" id="icon_71738931244817"
+											data-filename="phone.svg" width="27" height="27">
+											<title></title>
+											<g data-name="1" id="_1">
+												<path
+													d="M348.73,450.06a198.63,198.63,0,0,1-46.4-5.85c-52.43-12.65-106.42-44.74-152-90.36s-77.71-99.62-90.36-152C46.65,146.75,56.15,99.61,86.69,69.07l8.72-8.72a42.2,42.2,0,0,1,59.62,0l50.11,50.1a42.18,42.18,0,0,1,0,59.62l-29.6,29.59c14.19,24.9,33.49,49.82,56.3,72.63s47.75,42.12,72.64,56.31L334.07,299a42.15,42.15,0,0,1,59.62,0l50.1,50.1a42.16,42.16,0,0,1,0,59.61l-8.73,8.72C413.53,439,383.73,450.06,348.73,450.06ZM125.22,78a12,12,0,0,0-8.59,3.56l-8.73,8.72c-22.87,22.87-29.55,60-18.81,104.49,11.37,47.13,40.64,96.1,82.41,137.86s90.73,71,137.87,82.41c44.5,10.74,81.61,4.06,104.48-18.81l8.72-8.72a12.16,12.16,0,0,0,0-17.19l-50.09-50.1a12.16,12.16,0,0,0-17.19,0l-37.51,37.51a15,15,0,0,1-17.5,2.72c-30.75-15.9-61.75-39.05-89.65-66.95s-51-58.88-66.94-89.63a15,15,0,0,1,2.71-17.5l37.52-37.51a12.16,12.16,0,0,0,0-17.19l-50.1-50.11A12.07,12.07,0,0,0,125.22,78Z">
+												</path>
+												<path
+													d="M364.75,269.73a15,15,0,0,1-15-15,99.37,99.37,0,0,0-99.25-99.26,15,15,0,0,1,0-30c71.27,0,129.25,58,129.25,129.26A15,15,0,0,1,364.75,269.73Z">
+												</path>
+												<path
+													d="M428.15,269.73a15,15,0,0,1-15-15c0-89.69-73-162.66-162.65-162.66a15,15,0,0,1,0-30c106.23,0,192.65,86.43,192.65,192.66A15,15,0,0,1,428.15,269.73Z">
+												</path>
+											</g>
+										</svg>
+									</div>
+									<a class="text-color-primary text-decoration-none font-weight-bold text-2-5 opacity-hover-9 ms-2"
+										href="tel:+1 732 366 9116" target="_blank">+1 732 366 9116</a>
+								</div>
 							</div>
 							<div class="col-auto d-flex align-items-center">
 								<nav>
 									<ul class="list list-unstyled d-flex text-1 mb-0">
-										<li class="mb-0"><a href="about-us.html#talkus"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">PLAN
-												YOUR VISIT</a></li>
-										<li class="mb-0 ms-4-5 d-none d-sm-block"><a href="demo-church-events.html"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">CALENDAR</a>
-										</li>
+										<li class="mb-0"><a href="contact-us.html#talkus"
+												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
+												Table</a></li>
+
 									</ul>
 								</nav>
 								<div class="header-nav-features d-none d-md-block ms-5-5">
