--- a/contact-us.html
+++ b/contact-us.html
@@ -95,7 +95,7 @@
 										<li class="mb-0"><a href="contact-us.html#talkus"
 												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
 												Table</a></li>
-										
+
 									</ul>
 								</nav>
 								<div class="header-nav-features d-none d-md-block ms-5-5">
@@ -342,8 +342,8 @@
 								<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
-							<p class="alternative-font-4 text-3 text-color-light opacity-7">© Copyright 2024. All Rights
-								Reserved.</p>
+							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2021 Khana
+								Khazana Made By <a href="https://keryar.com/"> KERYAR.</a></p>
 						</div>
 					</div>
 				</div>
