--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Demo Church | Porto - Multipurpose Website Template</title>
+	<title>Home</title>
 
 	<meta name="keywords" content="WebSite Template" />
 	<meta name="description" content="Porto - Multipurpose Website Template">
@@ -467,8 +467,7 @@
 							<i class="fas fa-map-marker-alt text-color-primary custom-icon-size-1"></i>
 							<p class="custom-text-color-2 alternative-font-4 text-3-5">
 								<strong
-									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Porto
-									Church</strong>
+									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Address</strong>
 								Porto Church 123 Porto Blvd, </br>Suite 100 New York, NY
 							</p>
 						</div>
@@ -486,7 +485,7 @@
 							<i class="fas fa-phone-volume text-color-primary custom-icon-size-1"></i>
 							<p class="alternative-font-4 text-3-5">
 								<strong
-									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Call
+									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Contact
 									us now</strong>
 								<a href="tel:+91123456789" class="text-decoration-none custom-text-color-2">Phone :
 									(123) 456-789</a></br>
@@ -508,8 +507,8 @@
 								<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
-							<p class="alternative-font-4 text-3 text-color-light opacity-7">© Copyright 2024. All Rights
-								Reserved.</p>
+							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2021 Khana
+								Khazana Made By <a href="https://keryar.com/"> KERYAR.</a></p>
 						</div>
 					</div>
 				</div>
