--- a/404.html
+++ b/404.html
@@ -260,10 +260,11 @@
 							<strong
 								class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Call
 								us now</strong>
-							<a href="tel:+91123456789" class="text-decoration-none custom-text-color-2">Phone : (123)
+							<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone : (123)
 								456-789</a></br>
-							<a href="mail:mail@example.com" class="text-decoration-none custom-text-color-2">Email :
-								mail@example.com</a>
+							<a href="mail:khanakhazanaNj@gmail.com"
+								class="text-decoration-none custom-text-color-2">Email :
+								khanakhazanaNj@gmail.com</a>
 						</p>
 					</div>
 				</div>
