--- a/index.html
+++ b/index.html
@@ -320,7 +320,75 @@
 					</div>
 				</div>
 			</section>
-
+			<section class="section section-height-3 bg-color-grey-scale-1 border-0 m-0">
+				<div class="container pt-2">
+					<div class="row">
+						<div class="col text-center">
+							<h2 class="text-color-primary positive-ls-3 text-4 line-height-1 mb-2 appear-animation"
+								data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="200">INSIDE
+								KHANA KHAZANA</h2>
+							<h3 class="text-color-dark text-transform-none text-9 line-height-3 font-weight-medium mb-4 appear-animation"
+								data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="400">Our
+								Gallery</h3>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col appear-animation" data-appear-animation="fadeInUpShorterPlus"
+							data-appear-animation-delay="600">
+							<div class="lightbox"
+								data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}, 'mainClass': 'mfp-with-zoom', 'zoom': {'enabled': true, 'duration': 300}}">
+								<div class="owl-carousel-wrapper" style="height: 329.77px;">
+									<div class="carousel-half-full-width-wrapper carousel-half-full-width-right">
+										<div class="owl-carousel owl-theme carousel-half-full-width-right carousel-shadow-1 nav-bottom nav-bottom-align-left nav-style-1 nav-arrows-thin nav-dark nav-font-size-lg mb-0"
+											data-plugin-options="{'responsive': {'0': {'items': 1}, '576': {'items': 2}, '768': {'items': 3}, '992': {'items': 4}, '1200': {'items': 4}}, 'loop': false, 'nav': true, 'dots': false, 'margin': 20}">
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/1.jpg">
+													<img src="img/gallery/1.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/3.jpg">
+													<img src="img/gallery/3.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/8.jpg">
+													<img src="img/gallery/8.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/9.jpg">
+													<img src="img/gallery/9.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+											<div>
+												<a class="d-inline-block img-thumbnail img-thumbnail-no-borders img-thumbnail-hover-icon"
+													href="img/gallery/14.jpg">
+													<img src="img/gallery/14.jpg"
+														class="img-fluid box-shadow-4 rounded-0"
+														alt="Restaurant interior showcase 1" />
+												</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section class="section section-secondary section-no-border m-0">
 				<div class="container">
 					<div class="row justify-content-center text-center custom-negative-margin-1">
@@ -468,7 +536,7 @@
 							<p class="custom-text-color-2 alternative-font-4 text-3-5">
 								<strong
 									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Address</strong>
-								Porto Church 123 Porto Blvd, </br>Suite 100 New York, NY
+								1760 Easton Ave, Somerset, </br> NJ 08873, United States
 							</p>
 						</div>
 						<div class="col-lg-4 custom-sm-margin-bottom-1">
@@ -487,10 +555,11 @@
 								<strong
 									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Contact
 									us now</strong>
-								<a href="tel:+91123456789" class="text-decoration-none custom-text-color-2">Phone :
-									(123) 456-789</a></br>
-								<a href="mail:mail@example.com" class="text-decoration-none custom-text-color-2">Email :
-									mail@example.com</a>
+								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
+									+1 732 366 9116</a></br>
+								<a href="mail:khanakhazanaNj@gmail.com"
+									class="text-decoration-none custom-text-color-2">Email :
+									khanakhazanaNj@gmail.com</a>
 							</p>
 						</div>
 					</div>
