--- a/contact-us.html
+++ b/contact-us.html
@@ -201,32 +201,21 @@
 					<div class="row">
 						<div class="col-lg-6 mb-4 mb-md-0">
 							<h2 class="font-weight-bold">Talk to Us</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor ligula nec.</p>
+							<p>Get in touch with Khana Khazana for inquiries, reservations, or assistance—we're happy to
+								help!</p>
 							<div class="row">
-								<div class="col-lg-6 col-sm-12 position-relative">
+								<div class="col-lg-12 col-sm-12  align-items-center">
 									<div class="custom-location">
 										<img src="img/demos/church/others/pin.png" alt class="img-fluid" />
 										<h4 class="font-weight-bold custom-primary-font mb-1">Los Angeles</h4>
 										<p>
-											Porto Blvd, Suite 100<br>
-											Los Angeles/CA<br>
+											1760 Easton Ave, Somerset, NJ 08873, United States<br>
 											<strong>Phone:</strong> <a class="custom-text-color-default"
 												href="tel:+123456789">123-456-7890</a>
 										</p>
 									</div>
 								</div>
-								<div class="col-lg-6 col-sm-12 position-relative">
-									<div class="custom-location">
-										<img src="img/demos/church/others/pin.png" alt class="img-fluid" />
-										<h4 class="font-weight-bold custom-primary-font mb-1">New York</h4>
-										<p>
-											Porto Blvd, Suite 100<br>
-											New York/NY<br>
-											<strong>Phone:</strong> <a class="custom-text-color-default"
-												href="tel:+123456789">123-456-7890</a>
-										</p>
-									</div>
-								</div>
+
 							</div>
 							<form id="contactFormMessage" class="contact-form custom-form-style-1 mt-4"
 								action="php/contact-form.php" method="POST">
@@ -343,7 +332,7 @@
 								<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
-							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2021 Khana
+							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
 								Khazana Made By <a href="https://keryar.com/"> KERYAR.</a></p>
 						</div>
 					</div>
