--- a/about-us.html
+++ b/about-us.html
@@ -199,12 +199,14 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-7 col-sm-7">
-							<h2 class="font-weight-bold">We seek love God above all thing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ornare diam at lectus
-								ultrices rutrum. Fusce et lobortis orci, vel rutrum nisl. Praesent ut eros blandit risus
-								fermentum mattis. Ut eleifend metus in arcu malesuada, nec tincidunt lectus luctus.
-								Suspendisse dignissim velit eu lacinia egestas. Duis posuere mi a est vestibulum congue.
-								Pellentesque quis velit in velit maximus varius. Donec.</p>
+							<h2 class="font-weight-bold">Namaste & Welcome to Khana Khazana
+							</h2>
+							<p>At Khana Khazana, we take pride in celebrating the rich, diverse heritage of Indian
+								cuisine. Our passion lies in bringing authentic flavors, vibrant spices, and
+								time-honored cooking techniques to food lovers worldwide. True to our name, which means
+								“Treasure of Food,” we are committed to crafting exceptional vegetarian dishes that
+								honor tradition while embracing innovation.
+							</p>
 							<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis
 								mauris urna. Donec pellentesque eros non sapien malesuada, at facilisis diam interdum.
 								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
@@ -228,26 +230,32 @@
 
 			<section class="section section-secondary section-no-border m-0">
 				<div class="container">
-					<div class="row text-center justify-content-center">
-						<div class="col-sm-8 col-lg-4 mb-4 mb-lg-0">
-							<img src="img/demos/church/icons/custom-icon-1.png" alt class="img-repsonsive" />
-							<h2 class="font-weight-bold text-color-light">Our Values</h2>
-							<p class="custom-text-color-2 mb-0">Lorem ipsum dolor sit amet, adipiscing elit.</br> Mauris
-								accumsan tortor ut posuere consequat.</br> Fusce aliquet, dolor eget tempus ultricies,
-								eros.</p>
+					<div class="row justify-content-center text-center custom-negative-margin-1">
+						<div class="col">
+							<div class="countdown custom-newcomers-class custom-secondary-font custom-box-shadow font-weight-bold text-color-dark"
+								data-plugin-countdown
+								data-plugin-options="{'textDay': 'DAYS', 'textHour': 'HRS', 'textMin': 'MIN', 'textSec': 'SEC', 'date': '2025/01/01 12:00:00', 'numberClass': 'font-weight-bold text-color-primary', 'wrapperClass': 'text-color-dark line-height-4', 'insertHTMLbefore': 'Newcomers Class', 'textDay': 'DAYS', 'textHour': 'Hrs', 'textMin': 'Min', 'textSec': 'Sec', 'uppercase': false}">
+							</div>
 						</div>
-						<div class="col-sm-8 col-lg-4 mb-4 mb-lg-0">
+					</div>
+					<div class="row justify-content-center text-center">
+
+						<div class="col-lg-6 col-sm-8 mb-4 mb-lg-0">
 							<img src="img/demos/church/icons/custom-icon-2.png" alt class="img-repsonsive" />
-							<h2 class="font-weight-bold text-color-light">Join with Us</h2>
-							<p class="custom-text-color-2 mb-0"><strong class="text-color-light">Sundays at 8.00pm -
-									9.00pm</strong></br> at Porto Church 123 Porto Blvd, </br>Suite 100 New York, NY</p>
+							<h2 class="font-weight-bold text-color-light">Our Vision</h2>
+							<p class="custom-text-color-2"><strong class="text-color-light">Spreading the Magic of
+									Indian Vegetarian Cuisine.
+								</strong></br>Khana Khajana aims to be the USA’s top vegetarian Indian restaurant,
+								blending authenticity, innovation, and passion in every dish.</p>
 						</div>
-						<div class="col-sm-8 col-lg-4">
+						<div class="col-lg-6 col-sm-8">
 							<img src="img/demos/church/icons/custom-icon-3.png" alt class="img-repsonsive" />
 							<h2 class="font-weight-bold text-color-light">Our Mission</h2>
-							<p class="custom-text-color-2 mb-0">Lorem ipsum dolor sit amet, adipiscing elit.</br> Mauris
-								accumsan tortor ut posuere consequat.</br> Fusce aliquet, dolor eget tempus ultricies,
-								eros.</p>
+							<p class="custom-text-color-2">
+								<strong class="text-color-light">Redefining Indian Vegetarian Dining.
+								</strong></br> At Khana Khajana, our mission is to bring the diverse flavors
+								of India to every plate while maintaining authenticity, freshness, and innovation.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -443,7 +451,7 @@
 								<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
-							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2021 Khana
+							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
 								Khazana Made By <a href="https://keryar.com/"> KERYAR.</a></p>
 						</div>
 					</div>
