--- a/index.html
+++ b/index.html
@@ -185,7 +185,25 @@
 				data-dynamic-height="['600px','600px','600px','500px','500px']" style="height: 600px;">
 				<div class="owl-stage-outer">
 					<div class="owl-stage">
+						<div class="owl-item position-relative overflow-hidden"
+							style="background-image: url(img/demos/church/slides/slide-1.jpg); background-size: cover; background-position: center; background-position: center;">
+							<div class="container position-relative z-index-3 h-100">
+								<div class="row align-items-center justify-content-center h-100">
+									<div class="col-lg-7">
+										<div
+											class="d-flex flex-column justify-content-center align-items-center text-center h-100">
 
+											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
+												data-appear-animation="fadeInUpShorter"
+												data-appear-animation-delay="750"
+												data-plugin-options="{'minWindowWidth': 0}">bringing you the true
+												flavors of India.
+											</h1>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 						<!-- Carousel Slide 1 -->
 						<div class="owl-item position-relative overflow-hidden"
 							style="background-image: url(img/demos/church/slides/slide-1.jpg); background-size: cover; background-position: center; background-position: center;">
@@ -194,25 +212,15 @@
 									<div class="col-lg-7">
 										<div
 											class="d-flex flex-column justify-content-center align-items-center text-center h-100">
-											<span
-												class="position-relative text-color-light text-6 line-height-5 font-weight-medium custom-secondary-font pe-4 mb-0 appear-animation"
-												data-appear-animation="fadeInDownShorter"
-												data-appear-animation-delay="500"
-												data-plugin-options="{'minWindowWidth': 0}">
-												Introducing
-											</span>
-											<h1 class="text-color-light font-weight-extra-bold text-13 line-height-1 mb-2 appear-animation"
+
+											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
 												data-appear-animation="fadeInUpShorter"
 												data-appear-animation-delay="750"
-												data-plugin-options="{'minWindowWidth': 0}">Proceed to the Next Steps
+												data-plugin-options="{'minWindowWidth': 0}">a lifestyle that nourishes
+												both body and soul.
 											</h1>
-											<p class="text-5 text-color-light font-weight-light custom-secondary-font mb-5 appear-animation"
-												data-appear-animation="fadeInUpShorter"
-												data-appear-animation-delay="1000">JOIN OUR COMMUNITY CHURCH</p>
-											<a href="about-us.html"
-												class="btn btn-primary font-weight-bold btn-py-2 btn-px-4 appear-animation"
-												data-appear-animation="fadeInUpShorter"
-												data-appear-animation-delay="1250">LEARN MORE</a>
+
+
 										</div>
 									</div>
 								</div>
@@ -227,24 +235,13 @@
 									<div class="col-lg-7">
 										<div
 											class="d-flex flex-column justify-content-center align-items-center text-center h-100">
-											<span
-												class="position-relative text-color-light text-6 line-height-5 font-weight-medium custom-secondary-font pe-4 mb-0 appear-animation"
-												data-appear-animation="fadeInDownShorter"
-												data-appear-animation-delay="500"
-												data-plugin-options="{'minWindowWidth': 0}">
-												Together
-											</span>
-											<h1 class="text-color-light font-weight-extra-bold text-13 line-height-1 mb-2 appear-animation"
+
+											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
 												data-appear-animation="fadeInUpShorter"
 												data-appear-animation-delay="750"
-												data-plugin-options="{'minWindowWidth': 0}">We Can Make Difference</h1>
-											<p class="text-5 text-color-light font-weight-light custom-secondary-font mb-5 appear-animation"
-												data-appear-animation="fadeInUpShorter"
-												data-appear-animation-delay="1000">JOIN OUR COMMUNITY CHURCH</p>
-											<a href="about-us.html"
-												class="btn btn-primary font-weight-bold btn-py-2 btn-px-4 appear-animation"
-												data-appear-animation="fadeInUpShorter"
-												data-appear-animation-delay="1250">LEARN MORE</a>
+												data-plugin-options="{'minWindowWidth': 0}"> we go beyond serving food.
+											</h1>
+
 										</div>
 									</div>
 								</div>
@@ -263,11 +260,13 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-10">
-							<span class="custom-secondary-font font-weight-bold custom-text-color-1 text-4">First time
-								visitor</span>
-							<h2 class="font-weight-bold custom-text-color-1 m-0">Find out more about the Church. <span
-									class="font-weight-normal custom-secondary-font custom-font-italic">You belong
-									here</span></h2>
+							<!-- <span class="custom-secondary-font font-weight-bold custom-text-color-1 text-4">First time
+								visitor</span> -->
+							<h2 class="font-weight-bold custom-text-color-1 m-0">Every meal is a celebration, every bite
+								honors tradition,<br> and every guest is family.
+								<span class="font-weight-normal custom-secondary-font custom-font-italic">Join us for a
+									memorable dining experience!</span>
+							</h2>
 						</div>
 						<div class="col-lg-2 mt-4 mt-lg-0">
 							<a href="about-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Visitors
@@ -308,12 +307,13 @@
 				<div class="container">
 					<div class="row justify-content-center text-center">
 						<div class="col-md-8 col-xl-10">
-							<h2 class="font-weight-bold">We seek love God above all thing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam tortor, elementum vel
-								facilisis quis, elementum sit amet lacus. Nam ornare ante et vulputate fringilla. Nullam
-								sed orci eu urna dapibus vestibulum non a augue. Mauris dapibus vel massa at volutpat.
-								Sed hendrerit congue leo, eget ornare enim imperdiet vitae. Sed mi nibh, suscipit a enim
-								ac, aliquam tempus lacus.</p>
+							<h2 class="font-weight-bold">More Than Just a Meal – An Experience
+							</h2>
+							<p>At Khana Khajana, we bring the heart of India to your table, blending rich culinary
+								traditions with a modern dining experience that caters to every palate. Nestled in the
+								heart of the USA, our restaurant is a tribute to India's vibrant heritage, aromatic
+								spices, and age-old recipes, crafted with a contemporary twist for a truly
+								unforgettable experience.</p>
 							<a href="about-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase mt-4">Learn
 								More</a>
 						</div>
@@ -400,31 +400,27 @@
 						</div>
 					</div>
 					<div class="row justify-content-center text-center">
-						<div class="col-lg-4 col-sm-8 mb-4 mb-lg-0">
-							<img src="img/demos/church/icons/custom-icon-1.png" alt class="img-repsonsive" />
-							<h2 class="font-weight-bold text-color-light">Our Values</h2>
-							<p class="custom-text-color-2">Lorem ipsum dolor sit amet, adipiscing elit.</br> Mauris
-								accumsan tortor ut posuere consequat.</br> Fusce aliquet, dolor eget tempus ultricies,
-								eros.</p>
-						</div>
-						<div class="col-lg-4 col-sm-8 mb-4 mb-lg-0">
+
+						<div class="col-lg-6 col-sm-8 mb-4 mb-lg-0">
 							<img src="img/demos/church/icons/custom-icon-2.png" alt class="img-repsonsive" />
-							<h2 class="font-weight-bold text-color-light">Join with Us</h2>
-							<p class="custom-text-color-2"><strong class="text-color-light">Sundays at 8.00pm -
-									9.00pm</strong></br> at Porto Church, 123 porto</br> ave porto, PT 12345</p>
+							<h2 class="font-weight-bold text-color-light">Our Vision</h2>
+							<p class="custom-text-color-2"><strong class="text-color-light">Spreading the Magic of
+									Indian Vegetarian Cuisine.
+								</strong></br>Khana Khajana aims to be the USA’s top vegetarian Indian restaurant,
+								blending authenticity, innovation, and passion in every dish.</p>
 						</div>
-						<div class="col-lg-4 col-sm-8">
+						<div class="col-lg-6 col-sm-8">
 							<img src="img/demos/church/icons/custom-icon-3.png" alt class="img-repsonsive" />
 							<h2 class="font-weight-bold text-color-light">Our Mission</h2>
-							<p class="custom-text-color-2">Lorem ipsum dolor sit amet, adipiscing elit.</br> Mauris
-								accumsan tortor ut posuere consequat.</br> Fusce aliquet, dolor eget tempus ultricies,
-								eros.</p>
+							<p class="custom-text-color-2">
+								<strong class="text-color-light">Redefining Indian Vegetarian Dining.
+								</strong></br> At Khana Khajana, our mission is to bring the diverse flavors
+								of India to every plate while maintaining authenticity, freshness, and innovation.
+							</p>
 						</div>
 					</div>
 				</div>
 			</section>
-
-
 
 			<section class="section section-background section-no-border m-0"
 				style="background: url(img/demos/church/testimonial/testimonial-bg-1.jpg)">
@@ -441,17 +437,14 @@
 											<div class="testimonial-quote bg-color-light"><i
 													class="fas fa-quote-left text-color-primary"></i></div>
 											<blockquote>
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac auctor
-													eros, id gravida libero. Proin elit tellus, sollicitudin et ultrices
-													a, hendrerit efficitur enim. Etiam pulvinar et risus nec pulvinar.
-													Morbi eget enim scelerisque, imperdiet ligula sit amet, porta enim.
-													Ut eros quam, venenatis at placerat.</p>
+												<p>Absolutely the best vegetarian Indian food in town! The flavors are
+													rich, and the ingredients are so fresh!</p>
 											</blockquote>
 											<hr class="divider dashed divider-xs mt-0 mb-3">
 											<div class="testimonial-author">
 												<p>
-													<strong class="text-uppercase">Joe Albert Doe </strong>
-													<span class="text-color-primary"> - The Reverend</span>
+
+													<span class="text-color-primary"> - Meera S.</span>
 												</p>
 											</div>
 										</div>
@@ -464,16 +457,14 @@
 											<div class="testimonial-quote bg-color-light"><i
 													class="fas fa-quote-left text-color-primary"></i></div>
 											<blockquote>
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dapibus
-													feugiat diam, nec luctus orci molestie vel. Suspendisse potenti.
-													Quisque id aliquet dolor, posuere posuere purus. Aenean mauris
-													ipsum, pulvinar ut rutrum eget, maximus in libero. Praesent.</p>
+												<p>The best Indian food I’ve had in the USA! The spices, the
+													flavors—everything was just perfect!</p>
 											</blockquote>
 											<hr class="divider dashed divider-xs mt-0 mb-3">
 											<div class="testimonial-author">
 												<p>
-													<strong class="text-uppercase">Henry Doe</strong>
-													<span class="text-color-primary"> - Associate Minister</span>
+													<span class="text-color-primary"> - Sarah L.
+													</span>
 												</p>
 											</div>
 										</div>
@@ -486,23 +477,7 @@
 			</section>
 
 
-			<section class="section section-tertiary section-no-border m-0">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-10">
-							<span class="custom-secondary-font font-weight-bold custom-text-color-1 text-4">First time
-								visitor</span>
-							<h2 class="font-weight-bold custom-text-color-1 m-0">Find out more about the Church. <span
-									class="font-weight-normal custom-secondary-font custom-font-italic">You belong
-									here</span></h2>
-						</div>
-						<div class="col-lg-2 mt-4 mt-lg-0">
-							<a href="about-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Visitors
-								Guide</a>
-						</div>
-					</div>
-				</div>
-			</section>
+
 
 			<section class="section section-no-border custom-position-relative custom-overflow-hidden p-0 m-0">
 				<div class="custom-view-our-location text-center">
@@ -539,7 +514,7 @@
 								1760 Easton Ave, Somerset, </br> NJ 08873, United States
 							</p>
 						</div>
-						<div class="col-lg-4 custom-sm-margin-bottom-1">
+						<!-- <div class="col-lg-4 custom-sm-margin-bottom-1">
 							<i class="far fa-clock text-color-primary custom-icon-size-1"></i>
 							<p class="custom-text-color-2 alternative-font-4 text-3-5">
 								<strong
@@ -548,7 +523,7 @@
 								Sunday Worship<br>
 								8.00pm - 9.00pm
 							</p>
-						</div>
+						</div> -->
 						<div class="col-lg-3">
 							<i class="fas fa-phone-volume text-color-primary custom-icon-size-1"></i>
 							<p class="alternative-font-4 text-3-5">
@@ -576,7 +551,7 @@
 								<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
-							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2021 Khana
+							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
 								Khazana Made By <a href="https://keryar.com/"> KERYAR.</a></p>
 						</div>
 					</div>
