--- a/about-us.html
+++ b/about-us.html
@@ -207,11 +207,13 @@
 								“Treasure of Food,” we are committed to crafting exceptional vegetarian dishes that
 								honor tradition while embracing innovation.
 							</p>
-							<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis
-								mauris urna. Donec pellentesque eros non sapien malesuada, at facilisis diam interdum.
-								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
-								viverra neque ut, facilisis ligula. In faucibus tellus ac metus ullamcorper aliquet.
-								Aliquam sem dui, cursus quis magna vitae, convallis malesuada tellus. Nam malesuada.</p>
+							<h2 class="font-weight-bold">
+								Indulge in a Feast of Flavors
+							</h2>
+							<p class="text-2">Our chefs use the finest ingredients and time-honored recipes to create
+								dishes that satisfy the soul. Whether it’s the velvety butter panner, aromatic biryanis,
+								or crispy, golden samosas, each dish is a perfect harmony of taste and tradition.
+							</p>
 						</div>
 						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
 							<div class="custom-box-squares">
@@ -299,95 +301,6 @@
 								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
 								viverra neque ut, facilisis ligula. In faucibus tellus ac metus ullamcorper aliquet.
 								Aliquam sem dui, cursus quis magna vitae, convallis malesuada tellus. Nam malesuada.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section id="talkus" class="section section-no-border bg-color-light m-0">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 mb-4 mb-md-0">
-							<h2 class="font-weight-bold">Talk to Us</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor ligula nec.</p>
-							<div class="row">
-								<div class="col-lg-6 col-sm-12 position-relative">
-									<div class="custom-location">
-										<img src="img/demos/church/others/pin.png" alt class="img-fluid" />
-										<h4 class="font-weight-bold custom-primary-font mb-1">Los Angeles</h4>
-										<p>
-											Porto Blvd, Suite 100<br>
-											Los Angeles/CA<br>
-											<strong>Phone:</strong> <a class="custom-text-color-default"
-												href="tel:+123456789">123-456-7890</a>
-										</p>
-									</div>
-								</div>
-								<div class="col-lg-6 col-sm-12 position-relative">
-									<div class="custom-location">
-										<img src="img/demos/church/others/pin.png" alt class="img-fluid" />
-										<h4 class="font-weight-bold custom-primary-font mb-1">New York</h4>
-										<p>
-											Porto Blvd, Suite 100<br>
-											New York/NY<br>
-											<strong>Phone:</strong> <a class="custom-text-color-default"
-												href="tel:+123456789">123-456-7890</a>
-										</p>
-									</div>
-								</div>
-							</div>
-							<form id="contactFormMessage" class="contact-form custom-form-style-1 mt-4"
-								action="php/contact-form.php" method="POST">
-								<h6 class="font-weight-bold custom-primary-font">Send a Message:</h6>
-								<div class="contact-form-success alert alert-success d-none mt-4"
-									id="contactFormMessageSuccess">
-									<strong>Success!</strong> Your message has been sent to us.
-								</div>
-
-								<div class="contact-form-error alert alert-danger d-none mt-4"
-									id="contactFormMessageError">
-									<strong>Error!</strong> There was an error sending your message.
-									<span class="mail-error-message text-1 mt-2 d-block"
-										id="contactFormMessageErrorMessage"></span>
-								</div>
-
-								<input type="hidden" name="subject" value="Church - Subject" />
-								<div class="row mb-3">
-									<div class="form-group col-sm-6">
-										<input type="text" value="" data-msg-required="Please enter your name."
-											maxlength="100" class="form-control custom-xs-mb" name="name"
-											id="contactName" placeholder="Your Name" required>
-									</div>
-									<div class="form-group col-sm-6">
-										<input type="email" value=""
-											data-msg-required="Please enter your email address."
-											data-msg-email="Please enter a valid email address." maxlength="100"
-											class="form-control" name="email" id="contactEmail"
-											placeholder="Your E-mail" required>
-									</div>
-								</div>
-								<div class="row mb-3">
-									<div class="form-group col">
-										<textarea maxlength="5000" data-msg-required="Please enter your message."
-											rows="4" class="form-control" name="message" id="contactMessage"
-											placeholder="Your Message" required></textarea>
-									</div>
-								</div>
-								<div class="row mb-3">
-									<div class="form-group col">
-										<input type="submit" value="Send Message"
-											class="btn btn-primary custom-btn-style-1 text-uppercase float-end"
-											data-loading-text="Loading...">
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="col-lg-6">
-							<img src="img/demos/church/about-us/about-us-gallery-1.jpg" alt
-								class="img-fluid custom-border-1 custom-box-shadow" />
-							<a href="gallery.html"
-								class="btn btn-primary custom-btn-style-1 text-uppercase float-end mt-3">View
-								Gallery</a>
 						</div>
 					</div>
 				</div>
