--- a/contact-us.html
+++ b/contact-us.html
@@ -207,12 +207,6 @@
 								<div class="col-lg-12 col-sm-12  align-items-center">
 									<div class="custom-location">
 										<img src="img/demos/church/others/pin.png" alt class="img-fluid" />
-										<h4 class="font-weight-bold custom-primary-font mb-1">Los Angeles</h4>
-										<p>
-											1760 Easton Ave, Somerset, NJ 08873, United States<br>
-											<strong>Phone:</strong> <a class="custom-text-color-default"
-												href="tel:+123456789">123-456-7890</a>
-										</p>
 									</div>
 								</div>
 
@@ -264,11 +258,16 @@
 							</form>
 						</div>
 						<div class="col-lg-6">
-							<img src="img/demos/church/about-us/about-us-gallery-1.jpg" alt
-								class="img-fluid custom-border-1 custom-box-shadow" />
-							<a href="gallery.html"
-								class="btn btn-primary custom-btn-style-1 text-uppercase float-end mt-3">View
-								Gallery</a>
+							<div class="row">
+								<h2 class="font-weight-bold">A Wonderful Dining Destination!</h2>
+								<p>Experience the delightful flavors of Khana Khazana, where delicious cuisine, warm
+									hospitality, and local charm come together for an unforgettable meal. We can't wait
+									to serve you!</p>
+								<iframe
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.4176446894803!2d-74.0132423881996!3d40.708821637690534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1771eaaaab%3A0x9a6b6f79ec166688!2sKhana%20Khazana%20Food%20Cart!5e0!3m2!1sen!2sin!4v1739180248315!5m2!1sen!2sin"
+									width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
 						</div>
 					</div>
 				</div>
