--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>404 - Page Not Found | Porto - Multipurpose Website Template</title>
+	<title>404 - Page Not Found </title>
 
 	<meta name="keywords" content="WebSite Template" />
 	<meta name="description" content="Porto - Multipurpose Website Template">
@@ -247,11 +247,11 @@
 					<div class="col-lg-4 custom-sm-margin-bottom-1">
 						<i class="far fa-clock text-color-primary custom-icon-size-1"></i>
 						<p class="custom-text-color-2 alternative-font-4 text-3-5">
-							<strong
-								class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Join
-								us on</strong>
-							Sunday Worship<br>
-							8.00pm - 9.00pm
+							<strong class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">
+								Join us any day!
+							</strong>
+							Open Daily <br>
+							10:00 AM - 10:00 PM
 						</p>
 					</div>
 					<div class="col-lg-3">
@@ -262,9 +262,10 @@
 								us now</strong>
 							<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone : (123)
 								456-789</a></br>
-							<a href="mail:khanakhazanaNj@gmail.com"
-								class="text-decoration-none custom-text-color-2">Email :
-								khanakhazanaNj@gmail.com</a>
+							<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com" target="_blank"
+								class="text-decoration-none custom-text-color-2">
+								Email: khanakhazanaNj@gmail.com
+							</a>
 						</p>
 					</div>
 				</div>
