--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Demo Church | Porto - Multipurpose Website Template</title>
+	<title>About Us</title>
 
 	<meta name="keywords" content="WebSite Template" />
 	<meta name="description" content="Porto - Multipurpose Website Template">
@@ -208,11 +208,15 @@
 								honor tradition while embracing innovation.
 							</p>
 							<h2 class="font-weight-bold">
-								Indulge in a Feast of Flavors
+								Our Culinary Visionaries
 							</h2>
-							<p class="text-2">Our chefs use the finest ingredients and time-honored recipes to create
-								dishes that satisfy the soul. Whether it’s the velvety butter panner, aromatic biryanis,
-								or crispy, golden samosas, each dish is a perfect harmony of taste and tradition.
+							<p class="text-2">Chef Abhishek Patel and Chef Daxesh Shah, the creative minds behind Khana
+								Khazana, are culinary artisans dedicated to showcasing the essence of Indian flavors.
+								With years of expertise in the art of cooking, they bring an unparalleled level of
+								craftsmanship to every dish. Under their leadership, our kitchen is a space where
+								traditional recipes are thoughtfully reimagined with contemporary finesse, delivering a
+								truly unique and unforgettable dining experience.
+
 							</p>
 						</div>
 						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
@@ -229,7 +233,6 @@
 					</div>
 				</div>
 			</section>
-
 			<section class="section section-secondary section-no-border m-0">
 				<div class="container">
 					<div class="row justify-content-center text-center custom-negative-margin-1">
@@ -241,7 +244,6 @@
 						</div>
 					</div>
 					<div class="row justify-content-center text-center">
-
 						<div class="col-lg-6 col-sm-8 mb-4 mb-lg-0">
 							<img src="img/demos/church/icons/custom-icon-2.png" alt class="img-repsonsive" />
 							<h2 class="font-weight-bold text-color-light">Our Vision</h2>
@@ -260,51 +262,61 @@
 							</p>
 						</div>
 					</div>
+
 				</div>
 			</section>
-
-			<section class="section bg-color-tertiary section-no-border m-0">
+			<section class="section section-no-border bg-color-light m-0">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-3 col-sm-4">
-							<span class="thumb-info custom-thumb-info-3 thumb-info-no-zoom">
-								<span class="thumb-info-wrapper">
-									<img src="img/demos/church/about-us/about-us-expect-1.jpg" alt class="img-fluid" />
-								</span>
-								<span class="thumb-info-caption">
-									<span class="thumb-info-caption-text">
-										<h4 class="font-weight-bold custom-primary-font mb-0 mt-3">
-											Joe Albert Doe
-										</h4>
-										<p class="mb-0">The Reverend</p>
-									</span>
-								</span>
-							</span>
-							<a href="demo-church-about-us-staff.html"
-								class="btn btn-primary custom-btn-style-1 text-uppercase mb-4 mb-lg-0 mt-4"
-								title="Meet Our Staff">Meet our Staff</a>
+						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
+							<div class="custom-box-squares">
+								<img class="custom-cloud left-pos-2" alt src="img/demos/church/others/left-cloud.png" />
+								<div class="custom-big-square left-pos-2 custom-box-shadow"
+									style="background: url('img/demos/church/others/big-left-square-img.jpg'); background-size: cover;">
+								</div>
+								<div class="custom-small-square left-pos-2 custom-box-shadow"
+									style="background: url('img/demos/church/others/small-left-square-img.jpg'); background-size: cover;">
+								</div>
+							</div>
 						</div>
-						<div class="col-lg-9 col-sm-8">
-							<h2 class="font-weight-bold">What to Expect</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum felis ac turpis
-								consectetur molestie. Donec rutrum nibh ac felis convallis tempor. Nunc non consequat
-								lorem. Duis a porta sapien. Aliquam erat volutpat. Suspendisse aliquam, mi in elementum
-								lacinia, orci erat hendrerit sem, eget varius elit magna sagittis velit. Proin posuere
-								malesuada sem, nec venenatis justo sodales eget. Nunc imperdiet.</p>
-							<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis
-								mauris urna. Donec pellentesque eros non sapien malesuada, at facilisis diam interdum.
-								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
-								viverra neque ut, facilisis ligula. In faucibus tellus ac metus ullamcorper aliquet.
-								Aliquam sem dui, cursus quis magna vitae, convallis malesuada tellus. Nam malesuada.</p>
-							<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis
-								mauris urna. Donec pellentesque eros non sapien malesuada, at facilisis diam interdum.
-								Praesent non cursus dui, et consectetur risus. Pellentesque eu arcu sollicitudin,
-								viverra neque ut, facilisis ligula. In faucibus tellus ac metus ullamcorper aliquet.
-								Aliquam sem dui, cursus quis magna vitae, convallis malesuada tellus. Nam malesuada.</p>
+						<div class="col-lg-7 col-sm-7">
+							<h2 class="font-weight-bold">A Commitment to Authenticity & Excellence
+
+							</h2>
+							<p>Every dish at Khana Khazana is meticulously crafted using the freshest ingredients,
+								hand-selected spices, and a deep understanding of flavors. Our culinary philosophy is
+								rooted in quality, authenticity, and creativity, ensuring that every meal is not only a
+								delight to the taste buds but also a nourishing experience for the soul. Our dedication
+								to excellence allows us to present dishes that harmoniously blend tradition with modern
+								innovation, offering a culinary journey like no other.
+
+							</p>
+							<h2 class="font-weight-bold">
+								A Journey Through Flavors
+							</h2>
+							<p class="text-2">At Khana Khazana, we invite you on a gastronomic adventure where every
+								bite tells a story, every flavor transports you to the heart of India, and every dish is
+								a masterpiece. Join us in experiencing the magic of Indian cuisine—where tradition and
+								creativity come together to create an extraordinary celebration of taste.
+							</p>
+							<div class="testimonial-author d-flex justify-content-end">
+								<p>
+									<strong class="text-uppercase">Abhishek Patel & Daxesh Shah
+									</strong>
+									<br>
+									<span class="text-color-primary"> - Founders and Executive Chefs</span>
+								</p>
+							</div>
+
 						</div>
+
+
 					</div>
 				</div>
 			</section>
+
+
+
 
 			<footer id="footer" class="bg-color-secondary custom-footer m-0">
 				<div class="container pt-5">
@@ -331,10 +343,11 @@
 							<i class="far fa-clock text-color-primary custom-icon-size-1"></i>
 							<p class="custom-text-color-2 alternative-font-4 text-3-5">
 								<strong
-									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Join
-									us on</strong>
-								Sunday Worship<br>
-								8.00pm - 9.00pm
+									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">
+									Join us any day!
+								</strong>
+								Open Daily <br>
+								10:00 AM - 10:00 PM
 							</p>
 						</div>
 						<div class="col-lg-3">
@@ -345,9 +358,10 @@
 									us now</strong>
 								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
 									+1 732 366 9116</a></br>
-								<a href="mail:khanakhazanaNj@gmail.com"
-									class="text-decoration-none custom-text-color-2">Email :
-									khanakhazanaNj@gmail.com</a>
+								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com"
+									target="_blank" class="text-decoration-none custom-text-color-2">
+									Email: khanakhazanaNj@gmail.com
+								</a>
 							</p>
 						</div>
 					</div>
