--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
 							</h2>
 						</div>
 						<div class="col-lg-2 mt-4 mt-lg-0">
-							<a href="about-us.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Visitors
-								Guide</a>
+							<a href="menu.html" class="btn btn-primary custom-btn-style-1 text-uppercase">Explore
+								Menu</a>
 						</div>
 					</div>
 				</div>
@@ -443,7 +443,6 @@
 											<hr class="divider dashed divider-xs mt-0 mb-3">
 											<div class="testimonial-author">
 												<p>
-
 													<span class="text-color-primary"> - Meera S.</span>
 												</p>
 											</div>
@@ -514,16 +513,18 @@
 								1760 Easton Ave, Somerset, </br> NJ 08873, United States
 							</p>
 						</div>
-						<!-- <div class="col-lg-4 custom-sm-margin-bottom-1">
+						<div class="col-lg-4 custom-sm-margin-bottom-1">
 							<i class="far fa-clock text-color-primary custom-icon-size-1"></i>
 							<p class="custom-text-color-2 alternative-font-4 text-3-5">
 								<strong
-									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">Join
-									us on</strong>
-								Sunday Worship<br>
-								8.00pm - 9.00pm
+									class="d-block text-color-light custom-secondary-font text-5-5 line-height-8 mb-1">
+									Join us any day!
+								</strong>
+								Open Daily <br>
+								10:00 AM - 10:00 PM
 							</p>
-						</div> -->
+
+						</div>
 						<div class="col-lg-3">
 							<i class="fas fa-phone-volume text-color-primary custom-icon-size-1"></i>
 							<p class="alternative-font-4 text-3-5">
@@ -532,9 +533,11 @@
 									us now</strong>
 								<a href="tel:+1 732 366 9116" class="text-decoration-none custom-text-color-2">Phone :
 									+1 732 366 9116</a></br>
-								<a href="mail:khanakhazanaNj@gmail.com"
-									class="text-decoration-none custom-text-color-2">Email :
-									khanakhazanaNj@gmail.com</a>
+								<a href="https://mail.google.com/mail/?view=cm&to=khanakhazanaNj@gmail.com"
+									target="_blank" class="text-decoration-none custom-text-color-2">
+									Email: khanakhazanaNj@gmail.com
+								</a>
+
 							</p>
 						</div>
 					</div>
